--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,12 +1,16 @@
+@import 'imports/main';
+
+$paulrouget-pink: #f06;
+
 body {
-  font-family: Georgia;
+  font-family: $font-stack;
 }
 
 #title {
   text-align: center;
   margin-top: 20px;
   padding-bottom: 20px;
-  color: hsl(0, 0%, 20%);
+  color: $paulrouget-pink;
   font-size: 1.6em;
 }
 
@@ -16,7 +20,7 @@ body {
 }
 
 #content {
-  width: 800px;
+  width: 700px;
   margin: auto;
   overflow: auto;
 }
