--- a/sass/index.scss
+++ b/sass/index.scss
@@ -2,6 +2,8 @@
 
 $paulrouget-pink: #f06;
 
+$pink: #e06;
+
 body {
   font-family: $font-stack;
 }
@@ -101,4 +103,10 @@ body {
 
 .tweet-info {
   padding-left: 10px;
+}
+
+@media (max-width: 780px) {
+  #events {
+    float: none;
+  }
 }
